// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputRadio > disables radio button when disabled prop is provided > expected html 1`] = `
<div>
  <div>
    <div
      class="flex items-center"
    >
      <input
        aria-labelledby="input-radio-test-radio-label"
        class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden pointer-events-none cursor-not-allowed opacity-70"
        data-testid="input-radio"
        disabled=""
        id="input-radio-test-radio"
        name="test-radio"
        type="radio"
      />
      <label
        class="block pl-3 leading-6 pointer-events-none cursor-not-allowed opacity-70"
        for="input-radio-test-radio"
        id="input-radio-test-radio-label"
      >
        Radio Label
      </label>
    </div>
  </div>
</div>
`;

exports[`InputRadio > renders radio button with label and appends content > expected html 1`] = `
<div>
  <div>
    <div
      class="flex items-center"
    >
      <input
        aria-labelledby="input-radio-test-radio-label"
        class="size-5 border-gray-500 bg-gray-50 text-blue-600 focus:ring-2 focus:ring-blue-500 focus:outline-hidden"
        data-testid="input-radio"
        id="input-radio-test-radio"
        name="test-radio"
        type="radio"
      />
      <label
        class="block pl-3 leading-6"
        for="input-radio-test-radio"
        id="input-radio-test-radio-label"
      >
        Radio Label
      </label>
    </div>
    <div
      class="mt-4 ml-7"
    >
      <div
        data-testid="append-content"
      >
        Appended Content
      </div>
    </div>
  </div>
</div>
`;
